[package]
name = "learningdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
sea-orm = { version = "0.11.3", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = "0.11.3"
tokio = { version = "1.27.0", features = ["full"] }
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = "2.3.2"
bcrypt = "0.14.0"
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.7" 
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
eyre = "0.6.8"